trunk/Archive2/72/ea5377329a011b/output
main.cpp: In function 'constexpr int c2(int)':
main.cpp:13:17: error: call to non-constexpr function 'int rand()'
     return rand() + n;
                 ^
